# claude-remote

./: .gitattributes  .gitignore  CLAUDE.md  README.md
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/term/: term.html
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
clients/android/: build.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/android/app/src/main/: AndroidManifest.xml
clients/windows/: README.md  claude-notify-listener.ps1
clients/windows/legacy/: README.md  claude-notify-listener.ps1.http  notify-remote-bridge.sh  permission-approve-bridge.sh
daemon/: README.md  pyproject.toml
daemon/claude_remote_daemon/: __init__.py  auth.py  discovery.py  history.py  hooks.py  main.py  protocol.py  server.py  session.py
daemon/hook_bin/: __init__.py  main.py
daemon/systemd/: claude-remote.env.example  claude-remote.service
daemon/tests/: test_auth.py  test_discovery.py  test_history.py  test_hooks.py  test_integration.py  test_pair.py  test_protocol.py
docs/: DEPLOYMENT.md  DESIGN.md  EMULATOR_TESTING.md  FOR_CLAUDE_CODE.md  IMPLEMENTATION_PLAN.md  notification-flow.md
docs/handoffs/: 2026-06-29-xterm-mobile-fit.md  2026-06-30-session-takeover.md  2026-06-30-unified-notification-fanout.md  2026-07-01-xterm-terminal-display-scroll.md  README.md  TEMPLATE.md
protocol/: messages.md
scripts/: install-hooks.sh  install-service.sh  setup-android-toolchain.sh  setup-daemon.sh
(+39 files in other folders)
